# sen-rs

./: .gitignore  Cargo.toml  Makefile  README.md
docs/: DESIGN.md
examples/echo-plugin-zig/: README.md  build.sh  build.zig
examples/echo-plugin-zig/sdk/: msgpack.zig  plugin.zig
examples/echo-plugin-zig/src/: main.zig
examples/env-reader-plugin-zig/: README.md  build.zig
examples/env-reader-plugin-zig/sdk/: plugin.zig
examples/env-reader-plugin-zig/src/: main.zig
examples/file-reader-plugin/: Cargo.toml
examples/file-reader-plugin/data/: sample.txt
examples/file-reader-plugin/src/: lib.rs
examples/greet-plugin/: Cargo.toml
examples/greet-plugin/src/: lib.rs
examples/hello-plugin/: Cargo.toml
examples/hello-plugin/src/: lib.rs
examples/http-plugin/: Cargo.toml
examples/http-plugin/src/: lib.rs
examples/practical-cli/: Cargo.toml
examples/practical-cli/src/: main.rs
examples/router-example/: Cargo.toml
examples/router-example/src/: main.rs
examples/simple-cli/: Cargo.toml
examples/simple-cli/src/: main.rs
examples/wasm-cli/: Cargo.toml  README.md
examples/wasm-cli/plugins/: greet_plugin.wasm  hello_plugin.wasm
examples/wasm-cli/src/: main.rs
sen-plugin-api/: Cargo.toml
sen-plugin-api/src/: lib.rs
sen-plugin-host/: Cargo.toml
sen-plugin-host/src/: audit.rs  bridge.rs  discovery.rs  lib.rs  loader.rs  registry.rs  watcher.rs
sen-plugin-host/src/permission/: mod.rs  presets.rs  prompt.rs  store.rs  strategy.rs  trust.rs
sen-plugin-host/src/wasi/: context.rs  error.rs  loader.rs  mod.rs  sandbox.rs
sen-plugin-host/tests/: bridge_test.rs  integration_test.rs  wasi_integration_test.rs
sen-plugin-sdk/: Cargo.toml
sen-plugin-sdk/src/: lib.rs
sen-rs/: Cargo.toml  LICENSE-APACHE  LICENSE-MIT
sen-rs-macros/: Cargo.toml
sen-rs-macros/src/: lib.rs
sen-rs/src/: build_info.rs  lib.rs  mcp.rs  sensors.rs  tracing_support.rs
