[workspace]
resolver = "2"
members = [
    "sen-rs",
    "sen-rs-macros",
]
exclude = [
    "examples/*",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ynishi/sen-rs"

[workspace.dependencies]
# Macro dependencies
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
