[package]
name = "sen-plugin-host"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Wasm plugin host runtime for sen-rs CLI framework"

[features]
default = []
sen-integration = ["sen"]

[dependencies]
sen = { path = "../sen-rs", version = "0.8.0", optional = true }
sen-plugin-api = { path = "../sen-plugin-api", version = "0.8.0" }
wasmtime = { workspace = true }
rmp-serde = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"
thiserror = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
notify = { workspace = true }
tracing = { workspace = true }
dirs = "5.0"

[dev-dependencies]
tempfile = "3"
sen = { path = "../sen-rs", version = "0.8.0" }
