[package]
name = "sen-plugin-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "SDK for creating Wasm plugins with minimal boilerplate"

[dependencies]
sen-plugin-api = { path = "../sen-plugin-api", version = "0.8.0" }
rmp-serde = { workspace = true }
serde = { workspace = true }
