[package]
name = "sen-rs-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Proc macros for SEN CLI framework"
keywords = ["cli", "macro", "derive"]
categories = ["command-line-interface", "development-tools"]
readme = "../README.md"

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
