[package]
name = "hello-plugin"
version = "0.1.0"
edition = "2021"

# Exclude from parent workspace
[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
sen-plugin-api = { path = "../../sen-plugin-api" }
rmp-serde = "1.3"
serde = { version = "1.0", features = ["derive"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
